--- a/viewer.html
+++ b/viewer.html
@@ -24,31 +24,35 @@
 </div>
 <script>
 function getRoute(access_token, start_lat, start_lon, end_lat, end_lon, callback) {
-    var routeUrl = `https://api.mapbox.com/directions/v5/mapbox/driving/${start_lon}%2C${start_lat}%3B${end_lon}%2C${end_lat}.json?access_token=${access_token}&steps=true&geometries=geojson`;
-    jQuery.getJSON(routeUrl, function(data){
-        var properties = {
-            "stroke": "#fa946e",
-            "stroke-opacity": 1,
-            "stroke-width": 6
-        };
-        var geojson = {type: 'Feature', geometry: data.routes[0].geometry, properties: properties};
-        callback(geojson);
-    });
+  var routeUrl = `https://api.mapbox.com/directions/v5/mapbox/driving/${start_lon}%2C${start_lat}%3B${end_lon}%2C${end_lat}.json?access_token=${access_token}&steps=true&geometries=geojson`;
+  jQuery.getJSON(routeUrl, function(data){
+    var properties = {
+      "stroke": "#fa946e",
+      "stroke-opacity": 1,
+      "stroke-width": 6
+    };
+    var geojson = {type: 'Feature', geometry: data.routes[0].geometry, properties: properties};
+    callback(geojson);
+  })
+  .fail(function( jqxhr, textStatus, error ) {
+    console.log( "Request Failed: " + textStatus + ", " + error );
+  });
 }
 
 function showFeature(geojson) {
-    L.mapbox.featureLayer(geojson).addTo(map);
+  L.mapbox.featureLayer(geojson).addTo(map);
 }
 
 L.mapbox.accessToken = 'pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejh2N21nMzAxMmQzMnA5emRyN2lucW0ifQ.jSE-g2vsn48Ry928pqylcg'; // A sample key came from mapbox's own online example
 
 var qp = new URLSearchParams(window.location.search);
 if(qp.has("start_lat") && qp.has("start_lon") && qp.has("end_lat") && qp.has("end_lon")) {
-    var map = L.mapbox.map('map', 'mapbox.streets');
-    getRoute(
-        L.mapbox.accessToken, qp.get("start_lat"), qp.get("start_lon"),
-        qp.get("end_lat"), qp.get("end_lon"), showFeature);
-    map.setView([qp.get("start_lat"), qp.get("start_lon")], 14);
+  var map = L.mapbox.map('map', 'mapbox.streets');
+  getRoute(
+    L.mapbox.accessToken, qp.get("start_lat"), qp.get("start_lon"),
+    qp.get("end_lat"), qp.get("end_lon"), showFeature
+  );
+  map.setView([qp.get("start_lat"), qp.get("start_lon")], 14);
 }
 
 </script>
