--- a/viewer.html
+++ b/viewer.html
@@ -39,10 +39,6 @@ function getRoute(access_token, start_lat, start_lon, end_lat, end_lon, callback
   });
 }
 
-function showFeature(geojson) {
-  L.mapbox.featureLayer(geojson).addTo(map);
-}
-
 L.mapbox.accessToken = 'pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejh2N21nMzAxMmQzMnA5emRyN2lucW0ifQ.jSE-g2vsn48Ry928pqylcg'; // A sample key came from mapbox's own online example
 
 var qp = new URLSearchParams(window.location.search);
@@ -50,7 +46,9 @@ if(qp.has("start_lat") && qp.has("start_lon") && qp.has("end_lat") && qp.has("en
   var map = L.mapbox.map('map', 'mapbox.streets');
   getRoute(
     L.mapbox.accessToken, qp.get("start_lat"), qp.get("start_lon"),
-    qp.get("end_lat"), qp.get("end_lon"), showFeature
+    qp.get("end_lat"), qp.get("end_lon"), function(geojson) {
+      L.mapbox.featureLayer(geojson).addTo(map);
+    }
   );
   map.setView([qp.get("start_lat"), qp.get("start_lon")], 14);
 }
