--- a/viewer.html
+++ b/viewer.html
@@ -13,7 +13,7 @@
 <link href='https://api.mapbox.com/mapbox.js/v3.1.1/mapbox.css' rel='stylesheet' />
 <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.3.6/papaparse.min.js"></script>
-<script src="https://zenozeng.github.io/color-hash/dist/color-hash.js"></script>
+<script src="string2color.js"></script>
 <style>
   body { margin:0; padding:0; }
   #map { position:absolute; top:0; bottom:0; width:100%; }
@@ -33,6 +33,7 @@ function getRoute(access_token, start_lat, start_lon, end_lat, end_lon, callback
     console.log( "Request Failed: " + textStatus + ", " + error );
   });
 }
+
 
 L.mapbox.accessToken = 'pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejh2N21nMzAxMmQzMnA5emRyN2lucW0ifQ.jSE-g2vsn48Ry928pqylcg'; // A sample key came from mapbox's own online example
 
@@ -59,14 +60,13 @@ else if(qp.has("solution_url")) {
     }
     if(solution.data) {
       var map = L.mapbox.map('map', 'mapbox.streets');
-      var colorHash = new ColorHash();
       solution.data.forEach(function(leg){
         if(leg.veh_id){  // This also filters out the final empty line
           getRoute(
             L.mapbox.accessToken, leg.origin_lat, leg.origin_lon,
             leg.destination_lat, leg.destination_lon, function(geometry) {
               var properties = {
-                "stroke": colorHash.hex(leg.veh_id),
+                "stroke": StringToPredefinedColor.get(leg.veh_id),
                 "stroke-opacity": 1,
                 "stroke-width": 4
               };
