--- a/viewer.html
+++ b/viewer.html
@@ -23,7 +23,11 @@
 
 <div id='map'>
   <li><a href="?start_lat=40.733&start_lon=-73.989&end_lat=40.733&end_lon=-74">Example with input in url</a></li>
-  <li><a href="?solution_url=solution.csv">Example with input in a csv file</a></li>
+  <li>
+    <a href="?solution_url=solution.csv&description=From ${origin} to ${destination}">
+    Example with input in a csv file
+    </a>
+  </li>
 </div>
 <script>
 function getRoute(access_token, start_lat, start_lon, end_lat, end_lon, callback) {
@@ -34,6 +38,9 @@ function getRoute(access_token, start_lat, start_lon, end_lat, end_lon, callback
   });
 }
 
+// Usage: interpolate("hello ${name}", {name: "world"})
+// Copied from https://stackoverflow.com/a/41118285/728675
+var interpolate = (tpl, args) => tpl.replace(/\${(\w+)}/g, (_, v) => args[v]);
 
 L.mapbox.accessToken = 'pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejh2N21nMzAxMmQzMnA5emRyN2lucW0ifQ.jSE-g2vsn48Ry928pqylcg'; // A sample key came from mapbox's own online example
 
@@ -75,8 +82,9 @@ else if(qp.has("solution_url")) {
               var point = {
                 type: 'Feature',
                 geometry: {type: "Point", coordinates: [leg.origin_lon, leg.origin_lat]},
-                properties: {
+                properties: { // Derived from https://www.mapbox.com/help/markers-js/
                   title: leg.origin,
+                  description: qp.has("description") ? interpolate(qp.get("description"), leg) : "",
                   "marker-color": color,
                   "marker-symbol": icons[leg.origin[0]] || "marker"
                 }
