--- a/viewer.html
+++ b/viewer.html
@@ -22,9 +22,9 @@
 <body>
 
 <div id='map'>
-  <li><a href="?start_lat=40.733&start_lon=-73.989&end_lat=40.733&end_lon=-74">Example with input in url</a></li>
+  <li><a href="?start_lat=40.733&start_lon=-73.989&end_lat=40.733&end_lon=-74&stroke_width=6">Example with input in url</a></li>
   <li>
-    <a href="?solution_url=solution.csv&description=From ${origin} to ${destination}">
+    <a href="?solution_url=solution.csv&stroke_width=6&description=From ${origin} to ${destination}">
     Example with input in a csv file
     </a>
   </li>
@@ -53,7 +53,7 @@ if(qp.has("start_lat") && qp.has("start_lon") && qp.has("end_lat") && qp.has("en
       var geojson = {type: 'Feature', geometry: geometry, properties: {
         "stroke": "#fa946e", // orange
         "stroke-opacity": 1,
-        "stroke-width": 4
+        "stroke-width": qp.get("stroke_width") || 6
       }};
       L.mapbox.featureLayer(geojson).addTo(map);
     }
@@ -82,7 +82,7 @@ else if(qp.has("solution_url")) {
               var route = {type: 'Feature', geometry: geometry, properties: {
                 "stroke": color,
                 "stroke-opacity": 1,
-                "stroke-width": 4
+                "stroke-width": qp.get("stroke_width") || 6
               }};
               var point = {
                 type: 'Feature',
