Fix a typo introduced in commit f43f4b1

--- a/viewer.html
+++ b/viewer.html
@@ -54,7 +54,7 @@
         <input name="title" value="Waypoint ${origin}"></input>
       </div>
       <div><label>Description Template for each marker</label>
-        <input name="description" value="From ${origin} to ${destionation}"></input>
+        <input name="description" value="From ${origin} to ${destination}"></input>
       </div>
       <div><label>Column in csv to derive the color from</label>
         <input name="color_field" value="veh_id"></input>
